Add GG Form, change infor

--- a/index.html
+++ b/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://kit.fontawesome.com/3c7889a4ec.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/4ec109920f.js" crossorigin="anonymous"></script>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intro.js@2.9.3/minified/introjs.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/intro.js@2.9.3/themes/introjs-modern.css">
     <link rel="stylesheet" href="style.css">
-    <title>Đông Y</title>
+    <title>Đông Y Cô Giang </title>
 </head>
 <body>
 
@@ -19,11 +21,11 @@
     </nav>
 
     <div class="full-width-container">
-        <h2>Đông Y</h2>
+        <h2>Đông Y Cô Giang</h2>
     </div>
 
 <div class="container">
-
+    
     <p>Chuyên chữa trị các loại bệnh bằng phương pháp Đông Y Cổ Truyền.</p>
     <p></p>
 
@@ -38,8 +40,8 @@
 
     <hr>
 
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum laborum quis ipsam, assumenda incidunt tempore voluptatum, ab accusantium nobis animi necessitatibus? Dolorum animi eos minus accusamus corrupti, magnam facilis quae reiciendis magni illum inventore culpa excepturi! Dignissimos nesciunt ullam vel commodi perferendis, id iste nemo explicabo incidunt, doloribus aliquam animi temporibus obcaecati adipisci tenetur. Nam optio labore illo dolorem modi quia incidunt, maiores repudiandae numquam debitis, id, ad a fugiat. Ducimus iure accusantium sapiente fugiat, earum cum, sequi rerum autem eum tempore natus voluptatibus similique esse laudantium dolor facere perspiciatis, non magni. Commodi ipsam sequi nisi accusantium repellat tempora esse?</p>
-
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nostrum laborum quis ipsam, assumenda incidunt tempore voluptatum, ab accusantium nobis animi necessitatibus? Dolorum animi eos minus accusamus corrupti, magnam facilis quae reiciendis magni illum inventore culpa excepturi! Dignissimos nesciunt ullam vel commodi perferendis, id iste nemo explicabo incidunt, doloribus aliquam animi temporibus obcaecati adipisci tenetur. Nam optio labore illo dolorem modi quia incidunt, maiores repudiandae numquam debitis, id, ad a fugiat. Ducimus iure accusantium sapiente fugiat, earum cum, sequi rerum autem eum tempore natus voluptatibus similique esse laudantiu
+        m dolor facere perspiciatis, non magni. Commodi ipsam sequi nisi accusantium repellat tempora esse?</p>
 </div>
 
 <a href="tel:0966811037"><button class="contact">Liên hệ sđt: 0966811037</button><a/>
